# semver-cpp

./: .gitignore  CMakeLists.txt  README.md
include/semver/: version.hpp
test/semver/: version.cpp
